matomo/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: matomo-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: matomo-redirect@kubernetescrd
spec:
  tls:
  - secretName: matomo-cert
  rules:
  - host: track.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: matomo
             port:
               number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: matomo
spec:
  redirectScheme:
    scheme: https
    permanent: true
